# ray-tracing

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  configure-clang.sh  configure-debug.sh  configure.bat  configure.sh  cornell.blend  cornell.blend1  cubes.mtl  debug.sh  imgui.ini  run.sh  test.sh
benchmarks/vulkan-only/no-validation/: 1-max-frame-in-flight.txt  2-max-frame-in-flight.txt  3-max-frame-in-flight.txt  4-max-frame-in-flight.txt
benchmarks/vulkan-only/validation/: 1-max-frame-in-flight.txt  2-max-frame-in-flight.txt  3-max-frame-in-flight.txt  4-max-frame-in-flight.txt
libs/: CMakeLists.txt
shaders/: compile_shaders.sh  fragment.frag  fragment.spv  vertex.spv  vertex.vert
src/: CMakeLists.txt  main.cpp
src/linear_algebra/: Mat3.hpp  Mat4.hpp  ONB.hpp  Quaternion.decl.hpp  Quaternion.hpp  Vec3.decl.hpp  Vec3.hpp  Vec4.hpp  tests.cpp
src/ray-tracing/: BRDF.cpp  BRDF.hpp  Camera.hpp  DisneyBrdf.cpp  DisneyBrdf.hpp  Material.cpp  Material.hpp  Ray.hpp  Scene - Copy.hpp  Scene.hpp  objects.cpp  objects.hpp
src/renderer/: renderer.cpp  renderer.decl.hpp  renderer.hpp  renderer.impl.hpp  vk_enum_string_helper.hpp
src/utils/: BMP.cpp  BMP.hpp  Image.cpp  Image.hpp  MathUtils.cpp  MathUtils.hpp  Obj.cpp  Obj.hpp  Overloaded.hpp  Panic.hpp  SameAsAny.hpp  ScopedTimer.hpp  types.hpp
src/window/: window.cpp  window.hpp
